- Fixed wind arrow - Fixed 'a lot of text in nav bar' for small devices - Large Cities Section works now - Map Overlapping Search Bar - Map Skeleton

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -166,6 +166,10 @@ body {
   );
 }
 
+.leaflet-container {
+  z-index: 0 !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
